@@ -31,22 +31,15 @@ import jdk.internal.classfile.TypeKind;
 import jdk.internal.classfile.attribute.SourceFileAttribute;
 import jdk.internal.org.objectweb.asm.*;
 import org.openjdk.jmh.annotations.*;
-
 import java.io.FileOutputStream;
-import java.lang.constant.ClassDesc;
 import static java.lang.constant.ConstantDescs.*;
-import java.lang.constant.MethodTypeDesc;
+
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
-import static org.openjdk.bench.jdk.classfile.TestConstants.CD_PrintStream;
-import static org.openjdk.bench.jdk.classfile.TestConstants.CD_System;
-import static org.openjdk.bench.jdk.classfile.TestConstants.MTD_INT_VOID;
-import static org.openjdk.bench.jdk.classfile.TestConstants.MTD_VOID;
 import static jdk.internal.classfile.Opcode.*;
 import static jdk.internal.classfile.TypeKind.*;
-import static jdk.internal.classfile.TypeKind.IntType;
-import static jdk.internal.org.objectweb.asm.Opcodes.V12;
+import static org.openjdk.bench.jdk.classfile.TestConstants.*;
 
 /**
  * Write
@@ -65,7 +58,15 @@ import static jdk.internal.org.objectweb.asm.Opcodes.V12;
  */
 @Warmup(iterations = 3)
 @Measurement(iterations = 5)
-@Fork(1)
+@Fork(value = 1, jvmArgsAppend = {
+        "--add-exports", "java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile.attribute=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile.instruction=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile.components=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.classfile.impl=ALL-UNNAMED"})
 public class Write {
     static String checkFileAsm = "/tmp/asw/MyClass.class";
     static String checkFileBc = "/tmp/byw/MyClass.class";
@@ -77,17 +78,17 @@ public class Write {
     @BenchmarkMode(Mode.Throughput)
     public byte[] asmStream() {
         ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_FRAMES);
-        cw.visit(V12, Opcodes.ACC_PUBLIC, "MyClass", null, "java/lang/Object", null);
+        cw.visit(Opcodes.V12, Opcodes.ACC_PUBLIC, "MyClass", null, "java/lang/Object", null);
         cw.visitSource("MyClass.java", null);
 
         {
-            MethodVisitor mv = cw.visitMethod(0, "<init>", "()V", null, null);
+            MethodVisitor mv = cw.visitMethod(0, INIT_NAME, "()V", null, null);
             mv.visitCode();
             Label startLabel = new Label();
             Label endLabel = new Label();
             mv.visitLabel(startLabel);
             mv.visitVarInsn(Opcodes.ALOAD, 0);
-            mv.visitMethodInsn(Opcodes.INVOKESPECIAL, "java/lang/Object", "<init>", "()V", false);
+            mv.visitMethodInsn(Opcodes.INVOKESPECIAL, "java/lang/Object", INIT_NAME, "()V", false);
             mv.visitInsn(Opcodes.RETURN);
             mv.visitLabel(endLabel);
             mv.visitLocalVariable("this", "LMyClass;", null, startLabel, endLabel, 1);
@@ -141,18 +142,18 @@ public class Write {
     @BenchmarkMode(Mode.Throughput)
     public byte[] jdkTree() {
 
-        byte[] bytes = Classfile.build(ClassDesc.of("MyClass"), cb -> {
+        byte[] bytes = Classfile.of().build(CD_MyClass, cb -> {
             cb.withFlags(AccessFlag.PUBLIC);
             cb.withVersion(52, 0);
             cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
-              .withMethod("<init>", MethodTypeDesc.of(CD_void), 0, mb -> mb
+              .withMethod(INIT_NAME, MTD_void, 0, mb -> mb
                       .withCode(codeb -> codeb.loadInstruction(TypeKind.ReferenceType, 0)
-                                              .invokeInstruction(INVOKESPECIAL, CD_Object, "<init>", MTD_VOID, false)
+                                              .invokeInstruction(INVOKESPECIAL, CD_Object, INIT_NAME, MTD_void, false)
                                               .returnInstruction(VoidType)
                       )
               );
             for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MethodTypeDesc.of(CD_void, CD_String.arrayType()),
+                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MTD_void_StringArray,
                               AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
                               mb -> mb.withCode(c0 -> {
                                   jdk.internal.classfile.Label loopTop = c0.newLabel();
@@ -176,7 +177,7 @@ public class Write {
                                     .labelBinding(loopEnd)
                                     .fieldInstruction(GETSTATIC, CD_System, "out", CD_PrintStream)   // 13
                                     .loadInstruction(IntType, vFac)
-                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_INT_VOID, false)  // 15
+                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_void_int, false)  // 15
                                     .returnInstruction(VoidType);
                         }));
             }
@@ -189,18 +190,18 @@ public class Write {
     @BenchmarkMode(Mode.Throughput)
     public byte[] jdkTreePrimitive() {
 
-        byte[] bytes = Classfile.build(ClassDesc.of("MyClass"), cb -> {
+        byte[] bytes = Classfile.of().build(CD_MyClass, cb -> {
             cb.withFlags(AccessFlag.PUBLIC);
             cb.withVersion(52, 0);
             cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
-              .withMethod("<init>", MethodTypeDesc.of(CD_void), 0,
+              .withMethod(INIT_NAME, MTD_void, 0,
                           mb -> mb.withCode(codeb -> codeb.loadInstruction(ReferenceType, 0)
-                                                          .invokeInstruction(INVOKESPECIAL, CD_Object, "<init>", MTD_VOID, false)
+                                                          .invokeInstruction(INVOKESPECIAL, CD_Object, INIT_NAME, MTD_void, false)
                                                           .returnInstruction(VoidType)
                           )
               );
             for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MethodTypeDesc.of(CD_void, CD_String.arrayType()),
+                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MTD_void_StringArray,
                               AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
                               mb -> mb.withCode(c0 -> {
                                   jdk.internal.classfile.Label loopTop = c0.newLabel();
@@ -224,7 +225,7 @@ public class Write {
                                     .labelBinding(loopEnd)
                                     .fieldInstruction(GETSTATIC, CD_System, "out", CD_PrintStream)   // 13
                                     .loadInstruction(IntType, 1)
-                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_INT_VOID, false)  // 15
+                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_void_int, false)  // 15
                                     .returnInstruction(VoidType);
                         }));
             }
